# Commissioning

./: .gitignore  CMakeLists.txt
ANALYSIS/: CMakeLists.txt
ANALYSIS/diagnosic/: diagnostic_analysis.C  diagnostic_analysis.sh  run_diagnostic_analysis.sh
ANALYSIS/macros/: diagnostics.C  timing.C
ANALYSIS/macros/noise/: noise_analysis.C  run_analysis.sh
ANALYSIS/makedigit/: DoMerge.C  README  align.C  calib.C  coinc.C  fitFEA.C  makedigit.sh
ANALYSIS/noise/: conet_noise_analysis.sh  dump_diagnostic.C  loop_noise_analysis.sh  measure_noise.C  noise_analysis.C  noise_analysis.sh  noise_map.C  noisy_channels.C  run_noise_analysis.sh  voltage_scan.C
ANALYSIS/src/: ConfigurationMacroHelper.h  compressed-analysis.cc  compressed-analysis.hh
ANALYSIS/utils/: plateLines.C
DataDistribution/: o2-raw-file-reader-workflow.ini  readout_replay.cfg  readout_sim.cfg  startCompressor-flp178.sh  startCompressor-flp179.sh  startCompressor.sh  startCompressorMulti.sh  startCompressorQCC.sh  startInspector.sh  startInspectorMulti.sh  startInspectorSingle.sh  startQC.sh  startReadoutCRU-flp178.sh  startReadoutCRU-flp179.sh  startReadoutCRU.sh  startReco.sh  startRecoQC.sh  startRecoQC_compressor_only.sh  startStfBuilder.sh  startStfBuilderStandalone.sh  startStfSender.sh  toffull_100.json
IntRate/: README.md  multMC.C
PerformanceStudy/: EtaPhimacro.C  README.md  make_reso_with_ev_time.py  plot_momentum.C  plot_qc_histograms.py  plot_shifts.py  process_multiple_runs.sh
RAW/: CMakeLists.txt
Readout/: readout-stfb4M-flp178.cfg  readout-stfb4M-flp179.cfg  readout-stfb4M.cfg  (+2 more)
(+221 files in other folders)
